# cffi-lua

./: .gitignore  .mailmap  .travis.yml  CHANGELOG.md  COPYING.md  README.md  STATUS.md  ast.hh  cffi-lua-0.1.1-1.rockspec  cffi-lua-0.2.0-1.rockspec  cffi-lua-0.2.1-1.rockspec  cffi-lua-0.2.2-1.rockspec  cffi-lua-0.2.3-1.rockspec  cffi-lua-0.2.4-1.rockspec  ffi.cc  ffi.hh  lib.hh  main.cc  meson.build  meson_options.txt  parser.cc  parser.hh  state.cc  state.hh  test.lua
.ci/: README.md  build-cffi  build-cffi-windows  install-env  install-env-linux  install-env-windows  install-samu
.github/workflows/: build.yaml
docs/: api.md  introduction.md  semantics.md  syntax.md
include/: cffi-lua-config.h.in  cffi-lua.h
luarocks/: build.sh
src/: ast.cc  ast.hh  ffi.cc  ffi.hh  ffilib.cc  lib.cc  lib.hh  libffi.hh  lua.cc  lua.hh  main.cc  parser.cc  parser.hh  platform.hh  util.cc  util.hh
subprojects/: libffi.wrap
tests/: abi.lua  callbacks.lua  callconv.lua  cast.lua  cexpr.lua  copy_fill.lua  dump_string.lua  globals.lua  istype.lua  lib_variables.lua  meson.build  metatype.lua  metatype54.lua  parameterized.lua  redef.lua  redir.lua  runner.cc  runner.lua  scalar.lua  simple.lua  simple_pass.lua  simple_puts.lua  struct_array.lua  struct_pass.lua  struct_union_array_fields.lua  table_init.lua  testlib.cc  testlib.lua  unionval.lua  variadic.lua
